--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "95ab0057",
+   "metadata": {},
+   "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/EleonoraAiello/AIM23-24/blob/main/LogisticRegression.ipynb)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "4d64e2ba",
