--- a/DataAnalysis.ipynb
+++ b/DataAnalysis.ipynb
@@ -17,10 +17,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ad0149a",
+   "id": "a24a9f49",
    "metadata": {},
    "source": [
-    "    "
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/EleonoraAiello/AIM23-24/blob/main/DataAnalysis.ipynb)"
    ]
   },
   {
