--- a/ConvolutionalNeuralNetwork.ipynb
+++ b/ConvolutionalNeuralNetwork.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "22171df8",
+   "metadata": {},
+   "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/EleonoraAiello/AIM23-24/blob/main/ConvolutionalNeuralNetwork.ipynb)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "c3678411",
