--- a/DataAnalysis.ipynb
+++ b/DataAnalysis.ipynb
@@ -16,6 +16,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc2b32c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget https://raw.githubusercontent.com/EleonoraAiello/AIM23-24/main/dataT1DEXIstudyVideo_sedentary.csv"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a24a9f49",
    "metadata": {},
@@ -224,6 +234,22 @@
     "# The head and tail command will show us the first or last 5 instance and all the associated attributes\n",
     "dataTable.head()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fae35440",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8dcf414",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
